raylib.odin


    @(link_name="ImageTextEx")
    ImageTextEx :: proc(
        font : Font,
        text : cstring,
        fontSize : _c.float,
        spacing : _c.float,
        tint : Color
    ) -> Image ---;

    @(link_name="ImageDraw")
    ImageDraw :: proc(
        dst : ^Image,
        src : Image,
        srcRec : Rectangle,
        dstRec : Rectangle
    ) ---;

    @(link_name="ImageDrawRectangle")
    ImageDrawRectangle :: proc(
        dst : ^Image,
        rec : Rectangle,
        color : Color
    ) ---;

    @(link_name="ImageDrawRectangleLines")
    ImageDrawRectangleLines :: proc(
        dst : ^Image,
        rec : Rectangle,
        thick : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageDrawText")
    ImageDrawText :: proc(
        dst : ^Image,
        position : Vector2,
        text : cstring,
        fontSize : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageDrawTextEx")
    ImageDrawTextEx :: proc(
        dst : ^Image,
        position : Vector2,
        font : Font,
        text : cstring,
        fontSize : _c.float,
        spacing : _c.float,
        color : Color
    ) ---;

    @(link_name="ImageFlipVertical")
    ImageFlipVertical :: proc(image : ^Image) ---;

    @(link_name="ImageFlipHorizontal")
    ImageFlipHorizontal :: proc(image : ^Image) ---;

    @(link_name="ImageRotateCW")
    ImageRotateCW :: proc(image : ^Image) ---;

    @(link_name="ImageRotateCCW")
    ImageRotateCCW :: proc(image : ^Image) ---;

    @(link_name="ImageColorTint")
    ImageColorTint :: proc(
        image : ^Image,
        color : Color
    ) ---;

    @(link_name="ImageColorInvert")
    ImageColorInvert :: proc(image : ^Image) ---;

    @(link_name="ImageColorGrayscale")
    ImageColorGrayscale :: proc(image : ^Image) ---;

    @(link_name="ImageColorContrast")
    ImageColorContrast :: proc(
        image : ^Image,
        contrast : _c.float
    ) ---;

    @(link_name="ImageColorBrightness")
    ImageColorBrightness :: proc(
        image : ^Image,
        brightness : _c.int
    ) ---;

    @(link_name="ImageColorReplace")
    ImageColorReplace :: proc(
        image : ^Image,
        color : Color,
        replace : Color
    ) ---;

    @(link_name="GenImageColor")
    GenImageColor :: proc(
        width : _c.int,
        height : _c.int,
        color : Color
    ) -> Image ---;

    @(link_name="GenImageGradientV")
    GenImageGradientV :: proc(
        width : _c.int,
        height : _c.int,
        top : Color,
        bottom : Color
    ) -> Image ---;

    @(link_name="GenImageGradientH")
    GenImageGradientH :: proc(
        width : _c.int,
        height : _c.int,
        left : Color,
        right : Color
    ) -> Image ---;

    @(link_name="GenImageGradientRadial")
    GenImageGradientRadial :: proc(
        width : _c.int,
        height : _c.int,
        density : _c.float,
        inner : Color,
        outer : Color
    ) -> Image ---;

    @(link_name="GenImageChecked")
    GenImageChecked :: proc(
        width : _c.int,
        height : _c.int,
        checksX : _c.int,
        checksY : _c.int,
        col1 : Color,
        col2 : Color
    ) -> Image ---;

    @(link_name="GenImageWhiteNoise")
    GenImageWhiteNoise :: proc(
        width : _c.int,
        height : _c.int,
        factor : _c.float
    ) -> Image ---;

    @(link_name="GenImagePerlinNoise")
    GenImagePerlinNoise :: proc(
        width : _c.int,
        height : _c.int,
        offsetX : _c.int,
        offsetY : _c.int,
        scale : _c.float
    ) -> Image ---;

    @(link_name="GenImageCellular")
    GenImageCellular :: proc(
        width : _c.int,
        height : _c.int,
        tileSize : _c.int
    ) -> Image ---;

    @(link_name="GenTextureMipmaps")
    GenTextureMipmaps :: proc(texture : ^Texture2D) ---;

    @(link_name="SetTextureFilter")
    SetTextureFilter :: proc(
        texture : Texture2D,
        filterMode : _c.int
    ) ---;

    @(link_name="SetTextureWrap")
    SetTextureWrap :: proc(
        texture : Texture2D,
        wrapMode : _c.int
    ) ---;

    @(link_name="DrawTexture")
    DrawTexture :: proc(
        texture : Texture2D,
        posX : _c.int,
        posY : _c.int,
        tint : Color
    ) ---;

    @(link_name="DrawTextureV")
    DrawTextureV :: proc(
        texture : Texture2D,
        position : Vector2,
        tint : Color
    ) ---;

    @(link_name="DrawTextureEx")
    DrawTextureEx :: proc(
        texture : Texture2D,
        position : Vector2,
        rotation : _c.float,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawTextureRec")
    DrawTextureRec :: proc(
        texture : Texture2D,
        sourceRec : Rectangle,
        position : Vector2,
        tint : Color
    ) ---;

    @(link_name="DrawTextureQuad")
    DrawTextureQuad :: proc(
        texture : Texture2D,
        tiling : Vector2,
        offset : Vector2,
        quad : Rectangle,
        tint : Color
    ) ---;

    @(link_name="DrawTexturePro")
    DrawTexturePro :: proc(
        texture : Texture2D,
        sourceRec : Rectangle,
        destRec : Rectangle,
        origin : Vector2,
        rotation : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawTextureNPatch")
    DrawTextureNPatch :: proc(
        texture : Texture2D,
        nPatchInfo : NPatchInfo,
        destRec : Rectangle,
        origin : Vector2,
        rotation : _c.float,
        tint : Color
    ) ---;

    @(link_name="GetFontDefault")
    GetFontDefault :: proc() -> Font ---;

    @(link_name="LoadFont")
    LoadFont :: proc(fileName : cstring) -> Font ---;

    @(link_name="LoadFontEx")
    LoadFontEx :: proc(
        fileName : cstring,
        fontSize : _c.int,
        fontChars : ^_c.int,
        charsCount : _c.int
    ) -> Font ---;

    @(link_name="LoadFontFromImage")
    LoadFontFromImage :: proc(
        image : Image,
        key : Color,
        firstChar : _c.int
    ) -> Font ---;

    @(link_name="LoadFontData")
    LoadFontData :: proc(
        fileName : cstring,
        fontSize : _c.int,
        fontChars : ^_c.int,
        charsCount : _c.int,
        type : _c.int
    ) -> ^CharInfo ---;

    @(link_name="GenImageFontAtlas")
    GenImageFontAtlas :: proc(
        chars : ^CharInfo,
        charsCount : _c.int,
        fontSize : _c.int,
        padding : _c.int,
        packMethod : _c.int
    ) -> Image ---;

    @(link_name="UnloadFont")
    UnloadFont :: proc(font : Font) ---;

    @(link_name="DrawFPS")
    DrawFPS :: proc(
        posX : _c.int,
        posY : _c.int
    ) ---;

    @(link_name="DrawText")
    DrawText :: proc(
        text : cstring,
        posX : _c.int,
        posY : _c.int,
        fontSize : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawTextEx")
    DrawTextEx :: proc(
        font : Font,
        text : cstring,
        position : Vector2,
        fontSize : _c.float,
        spacing : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawTextRec")
    DrawTextRec :: proc(
        font : Font,
        text : cstring,
        rec : Rectangle,
        fontSize : _c.float,
        spacing : _c.float,
        wordWrap : bool,
        tint : Color
    ) ---;

    @(link_name="DrawTextRecEx")
    DrawTextRecEx :: proc(
        font : Font,
        text : cstring,
        rec : Rectangle,
        fontSize : _c.float,
        spacing : _c.float,
        wordWrap : bool,
        tint : Color,
        selectStart : _c.int,
        selectLength : _c.int,
        selectText : Color,
        selectBack : Color
    ) ---;

    @(link_name="MeasureText")
    MeasureText :: proc(
        text : cstring,
        fontSize : _c.int
    ) -> _c.int ---;

    @(link_name="MeasureTextEx")
    MeasureTextEx :: proc(
        font : Font,
        text : cstring,
        fontSize : _c.float,
        spacing : _c.float
    ) -> Vector2 ---;

    @(link_name="GetGlyphIndex")
    GetGlyphIndex :: proc(
        font : Font,
        character : _c.int
    ) -> _c.int ---;

    @(link_name="TextIsEqual")
    TextIsEqual :: proc(
        text1 : cstring,
        text2 : cstring
    ) -> bool ---;

    @(link_name="TextLength")
    TextLength :: proc(text : cstring) -> _c.uint ---;

    @(link_name="TextFormat")
    TextFormat :: proc(text : cstring) -> cstring ---;

    @(link_name="TextSubtext")
    TextSubtext :: proc(
        text : cstring,
        position : _c.int,
        length : _c.int
    ) -> cstring ---;

    @(link_name="TextReplace")
    TextReplace :: proc(
        text : cstring,
        replace : cstring,
        by : cstring
    ) -> cstring ---;

    @(link_name="TextInsert")
    TextInsert :: proc(
        text : cstring,
        insert : cstring,
        position : _c.int
    ) -> cstring ---;

    @(link_name="TextJoin")
    TextJoin :: proc(
        textList : ^cstring,
        count : _c.int,
        delimiter : cstring
    ) -> cstring ---;

    @(link_name="TextSplit")
    TextSplit :: proc(
        text : cstring,
        delimiter : _c.char,
        count : ^_c.int
    ) -> ^cstring ---;

    @(link_name="TextAppend")
    TextAppend :: proc(
        text : cstring,
        append : cstring,
        position : ^_c.int
    ) ---;

    @(link_name="TextFindIndex")
    TextFindIndex :: proc(
        text : cstring,
        find : cstring
    ) -> _c.int ---;

    @(link_name="TextToUpper")
    TextToUpper :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToLower")
    TextToLower :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToPascal")
    TextToPascal :: proc(text : cstring) -> cstring ---;

    @(link_name="TextToInteger")
    TextToInteger :: proc(text : cstring) -> _c.int ---;

    @(link_name="DrawLine3D")
    DrawLine3D :: proc(
        startPos : Vector3,
        endPos : Vector3,
        color : Color
    ) ---;

    @(link_name="DrawCircle3D")
    DrawCircle3D :: proc(
        center : Vector3,
        radius : _c.float,
        rotationAxis : Vector3,
        rotationAngle : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCube")
    DrawCube :: proc(
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCubeV")
    DrawCubeV :: proc(
        position : Vector3,
        size : Vector3,
        color : Color
    ) ---;

    @(link_name="DrawCubeWires")
    DrawCubeWires :: proc(
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCubeWiresV")
    DrawCubeWiresV :: proc(
        position : Vector3,
        size : Vector3,
        color : Color
    ) ---;

    @(link_name="DrawCubeTexture")
    DrawCubeTexture :: proc(
        texture : Texture2D,
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawSphere")
    DrawSphere :: proc(
        centerPos : Vector3,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawSphereEx")
    DrawSphereEx :: proc(
        centerPos : Vector3,
        radius : _c.float,
        rings : _c.int,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawSphereWires")
    DrawSphereWires :: proc(
        centerPos : Vector3,
        radius : _c.float,
        rings : _c.int,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawCylinder")
    DrawCylinder :: proc(
        position : Vector3,
        radiusTop : _c.float,
        radiusBottom : _c.float,
        height : _c.float,
        slices : _c.int,
        color : Color
    ) ---;
